# thermal_range_calib

./: README.md
thermal_range_calib/: CMakeLists.txt  README.md  package.xml
thermal_range_calib/config/: cmu_pillar_lidar_left_calib.yaml  cmu_pillar_lidar_left_config.yaml  cmu_pillar_lidar_thermal_calib.yaml  cmu_pillar_lidar_thermal_config.yaml  cmu_pillar_stereo_thermal_calib.yaml  cmu_pillar_stereo_thermal_config.yaml  config_outdoor.yaml  ftm_left_calib.yaml  ftm_left_config.yaml  gh034_calib.yaml  ign_apartment_calib.yaml  ign_apartment_config.yaml  old_config.yaml  thermal_calib.yaml  thermal_config.yaml  thermal_ign_calib.yaml  thermal_ign_config.yaml
thermal_range_calib/include/: 2d_image_processor.hpp  3d_point_cloud_processor.hpp  common.h  line_extractor_range.bkp.hpp  line_extractor_range.h  line_extractor_range.hpp  line_extractor_thermal.bkp.hpp  line_extractor_thermal.h  line_extractor_thermal.hpp  misc.hpp  thermal_canny.hpp  thermal_range_calib.bkp.hpp  thermal_range_calib.hpp
thermal_range_calib/launch/: bag_to_pcd.launch  calib.launch  cmu_pillar_lidar_left.launch  cmu_pillar_lidar_thermal.launch  cmu_pillar_stereo_thermal.launch  ftm_left_calib.launch  ftm_left_calib_ooad.launch  gh034_calib.launch  ign_apartment.launch  ign_apartment_multi.launch  lidar_line_test.launch  thermal_calib.launch  thermal_ign_calib.launch
thermal_range_calib/rviz_cfg/: calib.rviz
thermal_range_calib/scripts/: bag2image.py  canny_test.py  lidar_line.cpp  lidar_line.py  lineFromPlane_multi.py  lineFromPlane_test.py  planar_test.py  project_laser_to_img.py  project_laser_to_img_ftm.py  project_laser_to_img_ftm_trackbar.py  project_laser_to_img_fuming.py  project_laser_to_img_fuming_trackbar.py  project_laser_to_img_ign.py  project_laser_to_thermal_img_jockey_club_trackbar.py  rot_vec2euler.py  test_equation.py  vertex2pcd.py  visualize_plane.py
thermal_range_calib/scripts/sliding_bar/: project_laser_to_img_2024-aug-25.py  project_laser_to_img_2024-aug-25_trackbar.py  project_laser_to_img_ftm.py  project_laser_to_img_ftm_thermal.py  (+4 more)
thermal_range_calib/scripts_intrinsic/: a_manual_calib_tz_xyb.py  b_read_points_calib_tz_xyb.py  c_opencv_corner_detection.py  mouse_draw_line.py
thermal_range_calib/src/: bag_to_pcd.cpp  canny_test.cpp  counter_test.cpp  laplace_test.cpp  laplace_test_non_max.cpp  lidar_line_test.cpp  thermal_range_calib.cpp  thermal_range_calib_ooad.cpp  thermal_range_calib_ooad_multi.cpp
(+13 files in other folders)
